--- a/hadoop-study/pom.xml
+++ b/hadoop-study/pom.xml
@@ -35,6 +35,7 @@
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy-all</artifactId>
 			<version>2.3.3</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
