--- a/storm-study/pom.xml
+++ b/storm-study/pom.xml
@@ -21,6 +21,13 @@
 			<url>http://clojars.org/repo</url>
 		</repository>
 	</repositories>
+	<!-- 
+	<scm>
+		<connection>scm:git:git://github.com/wurstmeister/storm-kafka-0.8-plus.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com/wurstmeister/storm-kafka-0.8-plus.git</developerConnection>
+		<url>https://github.com/wurstmeister/storm-kafka-0.8-plus</url>
+	</scm>
+	 -->
 	
 	<dependencies>
 		<dependency>
@@ -35,21 +42,11 @@
 			<version>0.9.0</version>
 			<scope>provided</scope>
 		</dependency>
-		 <!-- 
 		<dependency>
-			<groupId>org.apache.storm</groupId>
-			<artifactId>storm-core</artifactId>
-			<version>0.9.1-incubating</version>
-			<scope>provided</scope>
+		  <groupId>net.wurstmeister.storm</groupId>
+		  <artifactId>storm-kafka-0.8-plus</artifactId>
+		  <version>0.4.0</version>
 		</dependency>
-		  -->
-		  <!-- 
-		<dependency>
-			<groupId>org.apache.thrift</groupId>
-			<artifactId>libthrift</artifactId>
-			<version>0.7.0</version>
-		</dependency>		
-		   -->
 		<!-- dependency by scp deploy -->
 		<dependency>
 			<groupId>org.apache.ant</groupId>
