--- a/kafka-study/pom.xml
+++ b/kafka-study/pom.xml
@@ -40,11 +40,18 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!-- dependency by scp deploy -->
 		<dependency>
-			<groupId>org.scala-lang</groupId>
-			<artifactId>scala-library</artifactId>
-			<version>2.9.2</version>
+			<groupId>org.apache.ant</groupId>
+			<artifactId>ant-jsch</artifactId>
+			<version>1.9.1</version>
 		</dependency>
+		<!-- dependency by scp deploy -->
+		<dependency>
+			<groupId>com.jcraft</groupId>
+			<artifactId>jsch</artifactId>
+			<version>0.1.50</version>
+		</dependency>		
 	</dependencies>
 
 	<build>
@@ -91,7 +98,7 @@
 								</transformer>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>com.storm.ExecuteDriver</mainClass>
+									<mainClass>com.kafka.ch05.producer.SimpleProducer</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
@@ -103,7 +110,7 @@
 				<configuration>
 					<archive>
 						<manifest>
-							<mainClass>com.storm.ExecuteDriver</mainClass>
+							<mainClass>com.kafka.ch05.producer.SimpleProducer</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
