--- a/hadoop-study/pom.xml
+++ b/hadoop-study/pom.xml
@@ -84,6 +84,11 @@
 			<artifactId>oozie</artifactId>
 			<version>2.3.2-cdh3u6</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.apache.hadoop.hive</groupId>
+		    <artifactId>hive-jdbc</artifactId>
+		    <version>0.7.1-cdh3u6</version>
+		</dependency>
 	</dependencies>
 
 	<build>
