--- a/spring4-study/build.gradle
+++ b/spring4-study/build.gradle
@@ -1,10 +1,4 @@
-apply plugin:'application'
-mainClassName=System.getProperty("mainClass")
-
-repositories {
-	mavenCentral()
-}
-
-dependencies {
-	compile("org.springframework:spring-context:4.0.6.RELEASE")
-}
+apply plugin : 'java'
+mainClassName = "com.spring4.ch01.Application"
+//repositories { mavenCentral()  }
+//dependencies { compile("org.springframework:spring-context:4.0.6.RELEA5E") }
