--- a/spark-study/pom.xml
+++ b/spark-study/pom.xml
@@ -12,6 +12,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<hadoop.version>2.2.0</hadoop.version>
 	</properties>
 
 	<dependencies>
@@ -24,19 +25,33 @@
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-core_2.10</artifactId>
-			<version>1.0.2</version>
+			<version>1.1.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-common</artifactId>
+			<version>${hadoop.version}</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>jdk.tools</artifactId>
+					<groupId>jdk.tools</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<!-- dependency by scp deploy -->
 		<dependency>
 			<groupId>org.apache.ant</groupId>
 			<artifactId>ant-jsch</artifactId>
 			<version>1.9.1</version>
+			<scope>compile</scope>
 		</dependency>
 		<!-- dependency by scp deploy -->
 		<dependency>
 			<groupId>com.jcraft</groupId>
 			<artifactId>jsch</artifactId>
 			<version>0.1.50</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 
