--- a/lucene-study/pom.xml
+++ b/lucene-study/pom.xml
@@ -15,6 +15,7 @@
 		<slf4j.version>1.5.0</slf4j.version>
 		<log4j.version>1.2.17</log4j.version>
 		<springframework.version>4.0.1.RELEASE</springframework.version>
+		<lucene.version>1.9.1</lucene.version>
 	</properties>
 
 	<dependencies>
@@ -43,6 +44,16 @@
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>${log4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-core</artifactId>
+			<version>${lucene.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.10</version>
 		</dependency>
 	</dependencies>
 	<build>
